--- a/src/public/servicio.html
+++ b/src/public/servicio.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Servicios</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- AOS CSS -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body class="bg-white">
-  <nav class="bg-black text-white px-6 py-2 flex items-center justify-between fixed top-0 left-0 w-full z-50">
+  <nav class="bg-black text-white px-6 py-7 flex items-center justify-between fixed top-0 left-0 w-full z-50">
     <div class="font-bold text-2xl">LARCAD</div>
     <!-- Hamburger Icon (Mobile) -->
     <button id="menu-toggle" class="md:hidden focus:outline-none" aria-label="Abrir menú">
@@ -51,113 +51,88 @@
   <div class="max-w-6xl mx-auto">
 
   <!-- Encabezado -->
-  <h2 class="text-center text-orange-500 text-lg font-semibold mb-10">Servicios</h2>
+  <h2 class="text-center text-orange-500 text-lg font-semibold mb-10" data-aos="fade-down">Servicios</h2>
 
   <!-- Servicio 1 -->
-  <div class="bg-white rounded-xl shadow-md p-6 mb-12">
-    <h3 class="text-blue-900 text-xl font-bold mb-4">
-    Servicio de Resguardo de Equipamiento en TI (HOUSING)
-    </h3>
-    <p class="text-gray-700 mb-6">
+  <div class="bg-white rounded-xl shadow-md p-6 mb-12" data-aos="fade-up">
+    <h3 class="text-blue-900 text-xl font-bold mb-4" data-aos="fade-right">Servicio de Resguardo de Equipamiento en TI (HOUSING)</h3>
+    <p class="text-gray-700 mb-6" data-aos="fade-left">
     Contamos con infraestructura tecnológica alineada a diversas líneas de negocio, permitiendo la disponibilidad inmediata de servicios en TI que se adaptan fácilmente a los objetivos de nuestros clientes. Nuestra infraestructura está en constante evolución y se basa en las siguientes plataformas y capacidades:
     </p>
 
     <!-- Íconos / Habilidades -->
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-6 text-center">
-    <div>
-      <img src="/img/icons/nosotros/iconoS1.svg" alt="Virtualización" class="mx-auto mb-2 w-12 h-12" />
-      <p class="text-sm">Ambiente de virtualización VMware (x86)</p>
-    </div>
-    <div>
-      <img src="/img/icons/nosotros/iconos2.svg" alt="Almacenamiento" class="mx-auto mb-2 w-12 h-12" />
-      <p class="text-sm">Sistema de almacenamiento híbrido con NFS y SAN</p>
-    </div>
-    <div>
-      <img src="/img/icons/nosotros/iconos3.svg" alt="Respaldo" class="mx-auto mb-2 w-12 h-12" />
-      <p class="text-sm">Herramientas de respaldo con recuperación en el tiempo</p>
-    </div>
-    <div>
-      <img src="/img/icons/nosotros/icononos4.svg" alt="Administración" class="mx-auto mb-2 w-12 h-12" />
-      <p class="text-sm">Administración y configuración de sistemas operativos</p>
-    </div>
-    <div>
-      <img src="/img/icons/nosotros/iconos5.svg" alt="Seguridad" class="mx-auto mb-2 w-12 h-12" />
-      <p class="text-sm">Seguridad informática y protección de datos</p>
-    </div>
+    <div data-aos="zoom-in"><img src="/img/icons/nosotros/iconoS1.svg" alt="Virtualización" class="mx-auto mb-2 w-12 h-12" /><p class="text-sm">Ambiente de virtualización VMware (x86)</p></div>
+    <div data-aos="zoom-in" data-aos-delay="100"><img src="/img/icons/nosotros/iconos2.svg" alt="Almacenamiento" class="mx-auto mb-2 w-12 h-12" /><p class="text-sm">Sistema de almacenamiento híbrido con NFS y SAN</p></div>
+    <div data-aos="zoom-in" data-aos-delay="200"><img src="/img/icons/nosotros/iconos3.svg" alt="Respaldo" class="mx-auto mb-2 w-12 h-12" /><p class="text-sm">Herramientas de respaldo con recuperación en el tiempo</p></div>
+    <div data-aos="zoom-in" data-aos-delay="300"><img src="/img/icons/nosotros/icononos4.svg" alt="Administración" class="mx-auto mb-2 w-12 h-12" /><p class="text-sm">Administración y configuración de sistemas operativos</p></div>
+    <div data-aos="zoom-in" data-aos-delay="400"><img src="/img/icons/nosotros/iconos5.svg" alt="Seguridad" class="mx-auto mb-2 w-12 h-12" /><p class="text-sm">Seguridad informática y protección de datos</p></div>
     </div>
   </div>
 
   <!-- Servicio 2 -->
-  <div class="bg-white rounded-xl shadow-md p-6">
+  <div class="bg-white rounded-xl shadow-md p-6" data-aos="fade-up">
   <div class="flex flex-col md:flex-row items-center md:items-start mb-6">
     <!-- Lado izquierdo: Texto -->
-    <div class="md:w-1/2 w-full md:pr-8">
-      <h3 class="text-blue-900 text-xl font-bold mb-4">
-        Servicio Administrado de Respaldo
-      </h3>
+    <div class="md:w-1/2 w-full md:pr-8" data-aos="fade-right">
+      <h3 class="text-blue-900 text-xl font-bold mb-4">Servicio Administrado de Respaldo</h3>
       <p class="text-gray-700 mb-6">
-        Ofrecemos servicios especializados con tecnología de vanguardia para resguardar y mantener íntegra la información de nuestros clientes. Garantizamos la preparación ante cualquier falla o desastre, asegurando la continuidad operativa y del servicio.
-        <br><br>
+        Ofrecemos servicios especializados con tecnología de vanguardia para resguardar y mantener íntegra la información de nuestros clientes. Garantizamos la preparación ante cualquier falla o desastre, asegurando la continuidad operativa y del servicio.<br><br>
         Nuestro servicio administrado de almacenamiento permite resguardar la información de forma segura en nuestras plataformas tecnológicas innovadoras, adaptándose a las necesidades del mercado.
       </p>
     </div>
     <!-- Lado derecho: Imagen -->
-    <div class="md:w-1/2 w-full flex justify-center md:justify-end mt-6 md:mt-0">
+    <div class="md:w-1/2 w-full flex justify-center md:justify-end mt-6 md:mt-0" data-aos="fade-left">
       <img src="/img/icons/nosotros/iconSn1.svg" alt="Servicio de Respaldo" class="w-40 sm:w-56 md:w-64 max-w-full h-auto" />
     </div>
   </div>
-
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
     <!-- Características -->
-    <div>
+    <div data-aos="fade-up" data-aos-delay="100">
       <h4 class="text-blue-800 font-semibold mb-2">Características</h4>
       <ul class="list-disc list-inside text-sm text-gray-700 space-y-1">
-      <li>Repositorio de información o almacenamiento de hasta 1TB con tolerancia a fallas.</li>
-      <li>Acceso seguro a la información.</li>
-      <li>Servicios administrados 24/7.</li>
-      <li>Monitoreo de salud de los equipos.</li>
+        <li>Repositorio de información o almacenamiento de hasta 1TB con tolerancia a fallas.</li>
+        <li>Acceso seguro a la información.</li>
+        <li>Servicios administrados 24/7.</li>
+        <li>Monitoreo de salud de los equipos.</li>
       </ul>
     </div>
-
     <!-- Funcionalidades -->
-    <div>
+    <div data-aos="fade-up" data-aos-delay="200">
       <h4 class="text-blue-800 font-semibold mb-2">Funcionalidades</h4>
       <ul class="list-disc list-inside text-sm text-gray-700 space-y-1">
-      <li>Resguardo de la información con disponibilidad del 99.99%.</li>
-      <li>Tolerancia a fallas.</li>
-      <li>Atención personalizada para soporte y mantenimiento.</li>
-      <li>Acceso seguro a la información.</li>
-      <li>Monitoreo del sistema (hardware, software y cambios).</li>
+        <li>Resguardo de la información con disponibilidad del 99.99%.</li>
+        <li>Tolerancia a fallas.</li>
+        <li>Atención personalizada para soporte y mantenimiento.</li>
+        <li>Acceso seguro a la información.</li>
+        <li>Monitoreo del sistema (hardware, software y cambios).</li>
       </ul>
     </div>
-    </div>
   </div>
+</div>
 
   <!-- Separador entre Servicio 2 y Servicio 3 -->
   <div class="my-12"></div>
 
    <!-- Servicio 3 -->
-  <div class="bg-white rounded-xl shadow-md p-6">
+  <div class="bg-white rounded-xl shadow-md p-6" data-aos="fade-up">
     <div class="flex flex-col md:flex-row-reverse items-center md:items-start mb-6">
       <!-- Lado derecho: Texto -->
-      <div class="md:w-1/2 w-full md:pl-8">
-        <h3 class="text-blue-900 text-xl font-bold mb-4">
-          Servicio Administrado de Almacenamiento
-        </h3>
+      <div class="md:w-1/2 w-full md:pl-8" data-aos="fade-left">
+        <h3 class="text-blue-900 text-xl font-bold mb-4">Servicio Administrado de Almacenamiento</h3>
         <p class="text-gray-700 mb-6">
-          Brindamos soluciones avanzadas para resguardar y mantener la integridad de la información, utilizando tecnología de última generación. Nuestro objetivo es asegurar la continuidad operativa de nuestros clientes ante cualquier eventualidad.
-          <br><br>
+          Brindamos soluciones avanzadas para resguardar y mantener la integridad de la información, utilizando tecnología de última generación. Nuestro objetivo es asegurar la continuidad operativa de nuestros clientes ante cualquier eventualidad.<br><br>
           El servicio administrado de almacenamiento permite resguardar la información de manera segura y eficiente, adaptándose a las necesidades específicas de cada cliente.
         </p>
       </div>
       <!-- Lado izquierdo: Imagen -->
-      <div class="md:w-1/2 w-full flex justify-center md:justify-start mt-6 md:mt-0">
+      <div class="md:w-1/2 w-full flex justify-center md:justify-start mt-6 md:mt-0" data-aos="fade-right">
         <img src="/img/icons/nosotros/iconSn1.svg" alt="Servicio de Almacenamiento" class="w-40 sm:w-56 md:w-64 max-w-full h-auto" />
       </div>
     </div>
     <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
       <!-- Características -->
-      <div>
+      <div data-aos="fade-up" data-aos-delay="100">
         <h4 class="text-blue-800 font-semibold mb-2">Características</h4>
         <ul class="list-disc list-inside text-sm text-gray-700 space-y-1">
           <li>Almacenamiento de hasta 1TB con tolerancia a fallas.</li>
@@ -167,7 +142,7 @@
         </ul>
       </div>
       <!-- Funcionalidades -->
-      <div>
+      <div data-aos="fade-up" data-aos-delay="200">
         <h4 class="text-blue-800 font-semibold mb-2">Funcionalidades</h4>
         <ul class="list-disc list-inside text-sm text-gray-700 space-y-1">
           <li>Disponibilidad de la información garantizada al 99.99%.</li>
@@ -183,5 +158,62 @@
   </div>
 </section>
   </main>
+  <footer class="bg-[#022d5a] text-white py-10">
+    <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-8 items-start">
+
+        <!-- Columna 1: Contacto -->
+        <div>
+            <h4 class="text-orange-400 font-bold mb-4">Detalles del contacto</h4>
+            <ul class="space-y-2 text-sm text-gray-200">
+                <li><a href="mailto:larcad@unach.mx" class="hover:underline text-blue-300">larcad@unach.mx</a></li>
+                <li>Universidad Autónoma de Chiapas</li>
+                <li>Carretera Emiliano Zapata Km. 8</li>
+                <li>Ciudad Universitaria, C. P. 29050</li>
+                <li>Tuxtla Gutiérrez, Chiapas, México</li>
+                <li>(+52) 961 617 8000 ext. 8107</li>
+            </ul>
+        </div>
+
+        <!-- Columna 2: Más Información -->
+        <div>
+            <h4 class="text-orange-400 font-bold mb-4">Más Información</h4>
+            <ul class="space-y-2 text-sm text-gray-200">
+                <li><a href="#" class="hover:text-orange-400 transition">inicio</a></li>
+                <li><a href="#" class="hover:text-orange-400 transition">acerca de</a></li>
+                <li><a href="#" class="hover:text-orange-400 transition">servicios</a></li>
+                <li><a href="#" class="hover:text-orange-400 transition">recursos</a></li>
+                <li><a href="#" class="hover:text-orange-400 transition">contacto</a></li>
+            </ul>
+        </div>
+
+        <!-- Columna 3: Mapa, Logos y redes -->
+        <div class="flex flex-col items-center space-y-4">
+            <!-- Mapa -->
+            <div class="w-full mb-4">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3821.651786418601!2d-93.1856328!3d16.694299600000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85ecd0a8df2ea837%3A0x197c180cf82b5093!2sLaboratorio%20Regional%20de%20Computo%20de%20Alto%20Desempeno%20%2C%20UNACH!5e0!3m2!1ses-419!2sus!4v1749743085891!5m2!1ses-419!2sus"
+                    width="100%" height="180" style="border:0; border-radius:12px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+            <div class="flex gap-4">
+                <!-- Logos (usa tus imágenes reales o URLs aquí) -->
+                <img src="/img/icons/logo_Cienciayfisica.png" alt="FAM UNACH" class="h-16" />
+                <img src="/img/UNACH.svg" alt="UNACH" class="h-16" />
+            </div>
+
+            <!-- Redes sociales -->
+            
+                    
+        </div>
+    </div>
+</footer>
+  <!-- AOS JS -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init({
+        duration: 1000,
+        once: true
+    });
+  </script>
 </body>
 </html>
