--- a/src/public/contacto.html
+++ b/src/public/contacto.html
@@ -10,22 +10,54 @@
 </head>
 <body class="bg-[#0E0E0E] text-white font-sans">
 
-    <!-- Navbar -->
-    <nav class="bg-black text-white px-6 py-7 flex items-center justify-between fixed top-0 left-0 w-full z-50 shadow-md">
+<nav class="bg-black text-white px-6 py-7 flex items-center justify-between fixed top-0 left-0 w-full z-50">
         <div class="font-bold text-2xl">LARCAD</div>
+        <!-- Hamburger Icon (Mobile) -->
         <button id="menu-toggle" class="md:hidden focus:outline-none" aria-label="Abrir menú">
             <svg class="w-7 h-7" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"/>
             </svg>
         </button>
-        <ul id="nav-menu" class="flex-col md:flex-row md:flex space-y-7 md:space-y-0 md:space-x-6 absolute md:static top-16 left-0 w-full md:w-auto bg-black md:bg-transparent px-6 md:px-0 py-4 md:py-0 hidden md:flex z-20">
-            <li><a href="index.html" class="hover:text-orange-500 transition">Inicio</a></li>
-            <li><a href="nosotros.html" class="hover:text-orange-500 transition">Nosotros</a></li>
-            <li><a href="servicio.html" class="hover:text-orange-500 transition">Servicio</a></li>
-            <li><a href="recursos.html" class="hover:text-orange-500 transition">Recursos</a></li>
-            <li><a href="contacto.html" class="hover:text-orange-500 transition">Contacto</a></li>
+        <!-- Menu -->
+        <ul id="nav-menu" class="flex-col md:flex-row md:flex space-y-4 md:space-y-0 md:space-x-6 absolute md:static top-16 left-0 w-full md:w-auto bg-black md:bg-transparent px-6 md:px-0 py-4 md:py-0 hidden md:flex z-20">
+            <li><a href="index.html" class="hover:text-blue-300 block">Inicio</a></li>
+            <li><a href="nosotros.html" class="hover:text-blue-300 block">Nosotros</a></li>
+            <li><a href="servicio.html" class="hover:text-blue-300 block">Servicio</a></li>
+            <li class="relative group">
+  <button type="button" class="hover:text-blue-300 flex items-center w-full md:w-auto">
+    Recursos
+    <svg class="ml-1 w-4 h-4 inline-block" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+    </svg>
+  </button>
+  <ul class="absolute md:left-0 mt-2 w-40 bg-black text-white rounded-lg shadow-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200 z-30 hidden md:block">
+    <li><a href="hardware.html" class="block px-4 py-2 hover:bg-blue-900">Hardware</a></li>
+    <li><a href="software.html" class="block px-4 py-2 hover:bg-blue-900">Software</a></li>
+  </ul>
+</li>
+
+            <li><a href="contacto.html" class="hover:text-blue-300 block">Contacto</a></li>
         </ul>
     </nav>
+<script>
+  const btn = document.getElementById('menu-toggle');
+  const menu = document.getElementById('nav-menu');
+  btn.addEventListener('click', () => {
+    menu.classList.toggle('hidden');
+  });
+
+  // Submenú funcional en móvil (menor a 768px)
+  const recursosItem = document.querySelector('li.group');
+  const submenu = recursosItem.querySelector('ul');
+  const recursosButton = recursosItem.querySelector('button');
+
+  recursosButton.addEventListener('click', (e) => {
+    if (window.innerWidth < 768) {
+      e.preventDefault();
+      submenu.classList.toggle('hidden');
+    }
+  });
+</script>
 
     <!-- Hero Banner -->
     <div class="w-full h-[60vh] md:h-[calc(100vh-72px)] relative pt-16">
@@ -177,6 +209,22 @@
             setTimeout(() => {
                 document.getElementById('success-message').classList.add('hidden');
             }, 4000);
+        });
+
+        // Mostrar menú en móvil al hacer clic en Recursos
+        const recursosLi = document.querySelectorAll('#nav-menu > li');
+        recursosLi.forEach(li => {
+          if (li.textContent.trim().startsWith('Recursos')) {
+            li.addEventListener('click', function(e) {
+              if(window.innerWidth < 768) {
+                const submenu = li.querySelector('ul');
+                if(submenu) {
+                  e.preventDefault();
+                  submenu.classList.toggle('hidden');
+                }
+              }
+            });
+          }
         });
     </script>
 </body>
