--- a/src/public/index.html
+++ b/src/public/index.html
@@ -22,20 +22,44 @@
         </button>
         <!-- Menu -->
         <ul id="nav-menu" class="flex-col md:flex-row md:flex space-y-4 md:space-y-0 md:space-x-6 absolute md:static top-16 left-0 w-full md:w-auto bg-black md:bg-transparent px-6 md:px-0 py-4 md:py-0 hidden md:flex z-20">
-            <li><a href="#" class="hover:text-blue-300 block">Inicio</a></li>
+            <li><a href="index.html" class="hover:text-blue-300 block">Inicio</a></li>
             <li><a href="nosotros.html" class="hover:text-blue-300 block">Nosotros</a></li>
             <li><a href="servicio.html" class="hover:text-blue-300 block">Servicio</a></li>
-            <li><a href="recursos.html" class="hover:text-blue-300 block">Recursos</a></li>
+            <li class="relative group">
+  <button type="button" class="hover:text-blue-300 flex items-center w-full md:w-auto">
+    Recursos
+    <svg class="ml-1 w-4 h-4 inline-block" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+    </svg>
+  </button>
+  <ul class="absolute md:left-0 mt-2 w-40 bg-black text-white rounded-lg shadow-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200 z-30 hidden md:block">
+    <li><a href="hardware.html" class="block px-4 py-2 hover:bg-blue-900">Hardware</a></li>
+    <li><a href="software.html" class="block px-4 py-2 hover:bg-blue-900">Software</a></li>
+  </ul>
+</li>
+
             <li><a href="contacto.html" class="hover:text-blue-300 block">Contacto</a></li>
         </ul>
     </nav>
-    <script>
-        const btn = document.getElementById('menu-toggle');
-        const menu = document.getElementById('nav-menu');
-        btn.addEventListener('click', () => {
-            menu.classList.toggle('hidden');
-        });
-    </script>
+<script>
+  const btn = document.getElementById('menu-toggle');
+  const menu = document.getElementById('nav-menu');
+  btn.addEventListener('click', () => {
+    menu.classList.toggle('hidden');
+  });
+
+  // Submenú funcional en móvil (menor a 768px)
+  const recursosItem = document.querySelector('li.group');
+  const submenu = recursosItem.querySelector('ul');
+  const recursosButton = recursosItem.querySelector('button');
+
+  recursosButton.addEventListener('click', (e) => {
+    if (window.innerWidth < 768) {
+      e.preventDefault();
+      submenu.classList.toggle('hidden');
+    }
+  });
+</script>
     <div class="w-full h-[60vh] md:h-[calc(100vh-72px)] relative"> <!-- Responsive height -->
         <img src="/img/supercomputo 1.png" alt="Supercomputo" class="w-full h-full object-cover" />
         <div class="absolute inset-0 flex flex-col items-end justify-center pr-4 md:pr-8 pointer-events-none">
