--- a/src/public/nosotros.html
+++ b/src/public/nosotros.html
@@ -18,22 +18,46 @@
             </svg>
         </button>
         <!-- Menu -->
-        <ul id="nav-menu" class="flex-col md:flex-row md:flex space-y-4 md:space-y-0 md:space-x-6 absolute md:static top-20 left-0 w-full md:w-auto bg-black md:bg-transparent px-6 md:px-0 py-4 md:py-0 hidden md:flex z-20">
+        <ul id="nav-menu" class="flex-col md:flex-row md:flex space-y-4 md:space-y-0 md:space-x-6 absolute md:static top-16 left-0 w-full md:w-auto bg-black md:bg-transparent px-6 md:px-0 py-4 md:py-0 hidden md:flex z-20">
             <li><a href="index.html" class="hover:text-blue-300 block">Inicio</a></li>
             <li><a href="nosotros.html" class="hover:text-blue-300 block">Nosotros</a></li>
             <li><a href="servicio.html" class="hover:text-blue-300 block">Servicio</a></li>
-            <li><a href="recursos.html" class="hover:text-blue-300 block">Recursos</a></li>
+            <li class="relative group">
+  <button type="button" class="hover:text-blue-300 flex items-center w-full md:w-auto">
+    Recursos
+    <svg class="ml-1 w-4 h-4 inline-block" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+    </svg>
+  </button>
+  <ul class="absolute md:left-0 mt-2 w-40 bg-black text-white rounded-lg shadow-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200 z-30 hidden md:block">
+    <li><a href="hardware.html" class="block px-4 py-2 hover:bg-blue-900">Hardware</a></li>
+    <li><a href="software.html" class="block px-4 py-2 hover:bg-blue-900">Software</a></li>
+  </ul>
+</li>
+
             <li><a href="contacto.html" class="hover:text-blue-300 block">Contacto</a></li>
         </ul>
     </nav>
-    <script>
-        const btn = document.getElementById('menu-toggle');
-        const menu = document.getElementById('nav-menu');
-        btn.addEventListener('click', () => {
-            menu.classList.toggle('hidden');
-        });
-    </script>
-    <div class="w-full h-[60vh] md:h-[calc(100vh-72px)] relative">
+<script>
+  const btn = document.getElementById('menu-toggle');
+  const menu = document.getElementById('nav-menu');
+  btn.addEventListener('click', () => {
+    menu.classList.toggle('hidden');
+  });
+
+  // Submenú funcional en móvil (menor a 768px)
+  const recursosItem = document.querySelector('li.group');
+  const submenu = recursosItem.querySelector('ul');
+  const recursosButton = recursosItem.querySelector('button');
+
+  recursosButton.addEventListener('click', (e) => {
+    if (window.innerWidth < 768) {
+      e.preventDefault();
+      submenu.classList.toggle('hidden');
+    }
+  });
+</script>
+    <div class="w-full h-[60vh] md:h-[calc(100vh-72px)] relative ">
         <img src="/img/supercomputo 1.png" alt="Supercomputo" class="w-full h-full object-cover" />
         <div class="absolute inset-0 flex flex-col items-end justify-center pr-4 md:pr-8 pointer-events-none">
             <img src="/img/Group 12.png" alt="LARCAD Logo" class="h-[18vw] md:h-[13vw] w-auto mb-[-2vw] md:mb-[-1vw]" />
@@ -53,8 +77,7 @@
     <div class="md:w-2/3 space-y-4 text-white">
       <h2 class="text-3xl font-bold text-orange-500">Bienvenidos</h2>
       <p class="text-base leading-relaxed">
-        El Laboratorio Regional de Cómputo de Alto Desempeño (LARCAD) es producto de la colaboración de tres instituciones con amplia experiencia en supercómputo que unen esfuerzos con el Conacyt para facilitar a la comunidad científica de México el acceso a recursos computacionales de alto nivel.
-        LARCAD está concebido como herramienta para el desarrollo de la ciencia y tecnología, para ofrecer servicios al sector público y privado, manifestó Valencia Palomo, quien es miembro nivel I del Sistema Nacional de Investigadores (SNI) y profesor investigador de la Facultad de Ciencias de la Universidad Autónoma de Querétaro (UAQ).
+        Iniciamos participando en proyectos utilizando nuestra infraestructura, la cual, reditúa en ingresos propios, con el fin de mantener en operación un Centro de Supercómputo de vanguardia tecnológica. Somos reconocidos como líderes a nivel regional, con presencia nacional e internacional, dedicados a proveer soluciones tecnológicas integrales y personalizadas en supercómputo, informática y redes, apoyados de infraestructura que nos permite contar con la capacidad para desarrollar proyectos de alto impacto en la sociedad para los sectores gubernamental, privado, educativo y científico, por medio de personal altamente capacitado y certificado en las mejores prácticas. Localizados en el corazón de México, en la ciudad capital de Tuxtla Gutiérrez Chiapas, LARCAD, posee una provechosa ubicación en el territorio mexicano.
       </p>
     </div>
     <!-- Imagen -->
@@ -64,7 +87,7 @@
   </div>
 </section>
 
-<section class="py-16 bg-fixed bg-center bg-cover" style="background-image: url('/img/fndNOSOTROS2.jpg');" data-aos="fade-up">
+<section class="py-16 bt-2 bg-fixed bg-center bg-cover" style="background-image: url('/img/fndNOSOTROS2.jpg');" data-aos="fade-up">
   <div class="max-w-6xl mx-auto backdrop-blur-md bg-black/10 border border-white/20 rounded-2xl shadow-xl flex flex-col md:flex-row items-center p-8 space-y-6 md:space-y-0 md:space-x-10 transition-transform duration-500 transform hover:scale-105">
                 <!-- Texto -->
                 <div class="md:w-2/3 space-y-4">
@@ -92,7 +115,7 @@
                         <div class="absolute inset-0 flex flex-col items-center justify-center text-center">
                             <h2 class="text-orange-500 text-xl font-bold z-20 transition-all duration-300 group-hover:opacity-0 group-hover:scale-90">MISIÓN</h2>
                             <p class="text-orange-500 text-base font-semibold opacity-0 scale-90 group-hover:opacity-100 group-hover:scale-100 transition-all duration-300 z-20 absolute inset-0 flex items-center justify-center text-center">
-                                Nuestra misión es proporcionar soluciones tecnológicas innovadoras que impulsen el crecimiento digital de nuestros clientes.
+                                Somos un Laboratorio Regional de Computo de Alto Desempeño(LARCAD), dinámico, innovador, de excelencia, con liderazgo regional, nacional y presencia internacional; dedicado a proveer soluciones integrales hechas a la medida en las Tecnologías de la información y comunicaciones.
                             </p>
                         </div>
                     </div>
@@ -103,7 +126,7 @@
                         <div class="absolute inset-0 flex flex-col items-center justify-center text-center">
                             <h2 class="text-orange-500 text-xl font-bold z-20 transition-all duration-300 group-hover:opacity-0 group-hover:scale-90">VISIÓN</h2>
                             <p class="text-orange-500 text-base font-semibold opacity-0 scale-90 group-hover:opacity-100 group-hover:scale-100 transition-all duration-300 z-20 absolute inset-0 flex items-center justify-center text-center">
-                                Ser líderes en innovación tecnológica, transformando ideas en productos de alto impacto global.
+                                Ser el Laboratorio egional de Computo de Alto Desempeño(LARCAD), para ser líder en México y figurar como un referente internacional, brindando soluciones tecnológicas con un alta capacitad de respuesta para lograr satisfacer las nuevas necesidades de la sociedad, atendiendo proyectos a gran escala. Esto bajo un esquema de: • Autosustentabilidad • Infraestructura en constante actualización • Innovación de servicios • Personal certificado y orientado al aprovechamiento de los recursos.
                             </p>
                         </div>
                     </div>
@@ -112,9 +135,9 @@
                         style="background-image: url('/img/pasillos.png');" data-aos="fade-up" data-aos-delay="200">
                         <div class="absolute inset-0 bg-black bg-opacity-60 group-hover:bg-opacity-80 transition-all duration-300"></div>
                         <div class="absolute inset-0 flex flex-col items-center justify-center text-center">
-                            <h2 class="text-orange-500 text-xl font-bold z-20 transition-all duration-300 group-hover:opacity-0 group-hover:scale-90">OBJETIVO</h2>
+                            <h2 class="text-orange-500 text-xl font-bold z-20 transition-all duration-300 group-hover:opacity-0 group-hover:scale-90">¿QUÉ HACEMOS?</h2>
                             <p class="text-orange-500 text-base font-semibold opacity-0 scale-90 group-hover:opacity-100 group-hover:scale-100 transition-all duration-300 z-20 absolute inset-0 flex items-center justify-center text-center">
-                                Garantizar productos de calidad, seguros y eficientes que satisfagan las necesidades de nuestros clientes.
+                                Las Soluciones tecnológicas que ofrecemos han surgido de un contexto cultural y tecnológico, que responde a las necesidades de nuestros clientes, enfrentándonos a los desafíos que actualmente tiene las organizaciones en cuestión de tecnología. Nuestros servicios tienen el objetivo claro de ofrecer soluciones efectivas, confiables y seguras que buscan lograr resultados concretos que generen una mejora y credibilidad en su adopción.
                             </p>
                         </div>
                     </div>
@@ -125,7 +148,7 @@
                         <div class="absolute inset-0 flex flex-col items-center justify-center text-center">
                             <h2 class="text-orange-500 text-xl font-bold z-20 transition-all duration-300 group-hover:opacity-0 group-hover:scale-90">POLÍTICAS DE CALIDAD</h2>
                             <p class="text-orange-500 text-base font-semibold opacity-0 scale-90 group-hover:opacity-100 group-hover:scale-100 transition-all duration-300 z-20 absolute inset-0 flex items-center justify-center text-center">
-                                Comprometidos con la mejora continua, cumpliendo con estándares internacionales y expectativas del cliente.
+                                En LARCAD estamos orientados a brindar soluciones de vanguardiaen materia de TICs, enfocados plenamente a la satisfacción del cliente, a través de la gestión de la calidad de nuestros servicios, en el marco de la norma IOS 9001:2008.
                             </p>
                         </div>
                     </div>
