--- a/src/public/nosotros.html
+++ b/src/public/nosotros.html
@@ -109,45 +109,45 @@
                 <h1 class="text-3xl font-bold text-center text-orange-500 mb-12">Nuestra Organización</h1>
                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
                     <!-- Misión -->
-                    <div class="relative group overflow-hidden rounded-lg shadow-lg bg-cover bg-center h-48 sm:h-64 transition-all duration-300"
+                    <div class="relative group overflow-hidden rounded-lg shadow-lg bg-cover bg-center min-h-[12rem] sm:min-h-[16rem] transition-all duration-300"
                         style="background-image: url('/img/pasillos.png');" data-aos="fade-up">
                         <div class="absolute inset-0 bg-black bg-opacity-60 group-hover:bg-opacity-80 transition-all duration-300"></div>
-                        <div class="absolute inset-0 flex flex-col items-center justify-center text-center">
+                        <div class="absolute inset-0 flex flex-col items-center justify-center text-center p-4 sm:p-6">
                             <h2 class="text-orange-500 text-xl font-bold z-20 transition-all duration-300 group-hover:opacity-0 group-hover:scale-90">MISIÓN</h2>
-                            <p class="text-orange-500 text-base font-semibold opacity-0 scale-90 group-hover:opacity-100 group-hover:scale-100 transition-all duration-300 z-20 absolute inset-0 flex items-center justify-center text-center">
+                            <p class="text-orange-500 text-base font-semibold opacity-0 scale-90 group-hover:opacity-100 group-hover:scale-100 transition-all duration-300 z-20 absolute inset-0 flex items-center justify-center text-center p-4 overflow-y-auto max-h-full">
                                 Somos un Laboratorio Regional de Computo de Alto Desempeño(LARCAD), dinámico, innovador, de excelencia, con liderazgo regional, nacional y presencia internacional; dedicado a proveer soluciones integrales hechas a la medida en las Tecnologías de la información y comunicaciones.
                             </p>
                         </div>
                     </div>
                     <!-- Visión -->
-                    <div class="relative group overflow-hidden rounded-lg shadow-lg bg-cover bg-center h-48 sm:h-64 transition-all duration-300"
+                    <div class="relative group overflow-hidden rounded-lg shadow-lg bg-cover bg-center min-h-[12rem] sm:min-h-[16rem] transition-all duration-300"
                         style="background-image: url('/img/pasillos.png');" data-aos="fade-up" data-aos-delay="100">
                         <div class="absolute inset-0 bg-black bg-opacity-60 group-hover:bg-opacity-80 transition-all duration-300"></div>
-                        <div class="absolute inset-0 flex flex-col items-center justify-center text-center">
+                        <div class="absolute inset-0 flex flex-col items-center justify-center text-center p-4 sm:p-6">
                             <h2 class="text-orange-500 text-xl font-bold z-20 transition-all duration-300 group-hover:opacity-0 group-hover:scale-90">VISIÓN</h2>
-                            <p class="text-orange-500 text-base font-semibold opacity-0 scale-90 group-hover:opacity-100 group-hover:scale-100 transition-all duration-300 z-20 absolute inset-0 flex items-center justify-center text-center">
+                            <p class="text-orange-500 text-base font-semibold opacity-0 scale-90 group-hover:opacity-100 group-hover:scale-100 transition-all duration-300 z-20 absolute inset-0 flex items-center justify-center text-center p-4 overflow-y-auto max-h-full">
                                 Ser el Laboratorio egional de Computo de Alto Desempeño(LARCAD), para ser líder en México y figurar como un referente internacional, brindando soluciones tecnológicas con un alta capacitad de respuesta para lograr satisfacer las nuevas necesidades de la sociedad, atendiendo proyectos a gran escala. Esto bajo un esquema de: • Autosustentabilidad • Infraestructura en constante actualización • Innovación de servicios • Personal certificado y orientado al aprovechamiento de los recursos.
                             </p>
                         </div>
                     </div>
                     <!-- Objetivo -->
-                    <div class="relative group overflow-hidden rounded-lg shadow-lg bg-cover bg-center h-48 sm:h-64 transition-all duration-300"
+                    <div class="relative group overflow-hidden rounded-lg shadow-lg bg-cover bg-center min-h-[12rem] sm:min-h-[16rem] transition-all duration-300"
                         style="background-image: url('/img/pasillos.png');" data-aos="fade-up" data-aos-delay="200">
                         <div class="absolute inset-0 bg-black bg-opacity-60 group-hover:bg-opacity-80 transition-all duration-300"></div>
-                        <div class="absolute inset-0 flex flex-col items-center justify-center text-center">
+                        <div class="absolute inset-0 flex flex-col items-center justify-center text-center p-4 sm:p-6">
                             <h2 class="text-orange-500 text-xl font-bold z-20 transition-all duration-300 group-hover:opacity-0 group-hover:scale-90">¿QUÉ HACEMOS?</h2>
-                            <p class="text-orange-500 text-base font-semibold opacity-0 scale-90 group-hover:opacity-100 group-hover:scale-100 transition-all duration-300 z-20 absolute inset-0 flex items-center justify-center text-center">
+                            <p class="text-orange-500 text-base font-semibold opacity-0 scale-90 group-hover:opacity-100 group-hover:scale-100 transition-all duration-300 z-20 absolute inset-0 flex items-center justify-center text-center p-4 overflow-y-auto max-h-full">
                                 Las Soluciones tecnológicas que ofrecemos han surgido de un contexto cultural y tecnológico, que responde a las necesidades de nuestros clientes, enfrentándonos a los desafíos que actualmente tiene las organizaciones en cuestión de tecnología. Nuestros servicios tienen el objetivo claro de ofrecer soluciones efectivas, confiables y seguras que buscan lograr resultados concretos que generen una mejora y credibilidad en su adopción.
                             </p>
                         </div>
                     </div>
                     <!-- Políticas de Calidad -->
-                    <div class="relative group overflow-hidden rounded-lg shadow-lg bg-cover bg-center h-48 sm:h-64 transition-all duration-300"
+                    <div class="relative group overflow-hidden rounded-lg shadow-lg bg-cover bg-center min-h-[12rem] sm:min-h-[16rem] transition-all duration-300"
                         style="background-image: url('/img/pasillos.png');" data-aos="fade-up" data-aos-delay="300">
                         <div class="absolute inset-0 bg-black bg-opacity-60 group-hover:bg-opacity-80 transition-all duration-300"></div>
-                        <div class="absolute inset-0 flex flex-col items-center justify-center text-center">
+                        <div class="absolute inset-0 flex flex-col items-center justify-center text-center p-4 sm:p-6">
                             <h2 class="text-orange-500 text-xl font-bold z-20 transition-all duration-300 group-hover:opacity-0 group-hover:scale-90">POLÍTICAS DE CALIDAD</h2>
-                            <p class="text-orange-500 text-base font-semibold opacity-0 scale-90 group-hover:opacity-100 group-hover:scale-100 transition-all duration-300 z-20 absolute inset-0 flex items-center justify-center text-center">
+                            <p class="text-orange-500 text-base font-semibold opacity-0 scale-90 group-hover:opacity-100 group-hover:scale-100 transition-all duration-300 z-20 absolute inset-0 flex items-center justify-center text-center p-4 overflow-y-auto max-h-full">
                                 En LARCAD estamos orientados a brindar soluciones de vanguardiaen materia de TICs, enfocados plenamente a la satisfacción del cliente, a través de la gestión de la calidad de nuestros servicios, en el marco de la norma IOS 9001:2008.
                             </p>
                         </div>
