--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="icon" href="/img/icons/icono2.png" type="image/svg+xml">
 
 
     <!-- AOS CSS -->
