--- a/src/public/nosotros.html
+++ b/src/public/nosotros.html
@@ -9,6 +9,19 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 </head>
 <body class="bg-[#0E0E0E]">
+    <div id="loader" class="fixed inset-0 z-50 flex items-center justify-center bg-white">
+    <img src="/img/cargando.gif" alt="Cargando..." class="w-32 h-32 animate-pulse" />
+  </div>
+  <script>
+    // Muestra el loader al cargar la página
+    window.onload = function() {
+        const loader = document.getElementById('loader');
+        // Oculta el loader después de 2 segundos (ajusta según sea necesario)
+        setTimeout(() => {
+            loader.style.display = 'none';
+        }, 500); // Cambia 2000 a 0 si no quieres un retraso
+    };
+</script>
     <nav class="bg-black text-white px-6 py-7 flex items-center justify-between fixed top-0 left-0 w-full z-50">
         <div class="font-bold text-2xl">LARCAD</div>
         <!-- Hamburger Icon (Mobile) -->
@@ -125,7 +138,7 @@
                         <div class="absolute inset-0 bg-black bg-opacity-60 group-hover:bg-opacity-80 transition-all duration-300"></div>
                         <div class="absolute inset-0 flex flex-col items-center justify-center text-center p-4 sm:p-6">
                             <h2 class="text-orange-500 text-xl font-bold z-20 transition-all duration-300 group-hover:opacity-0 group-hover:scale-90">VISIÓN</h2>
-                            <p class="text-orange-500 text-base font-semibold opacity-0 scale-90 group-hover:opacity-100 group-hover:scale-100 transition-all duration-300 z-20 absolute inset-0 flex items-center justify-center text-center p-4 overflow-y-auto max-h-full">
+                            <p class="text-orange-500 text-base font-semibold opacity-0 scale-90 group-hover:opacity-100 group-hover:scale-100 transition-all duration-300 z-20 absolute inset-0 flex items-center justify-center text-center p-4 pt-10 sm:pt-5  overflow-y-auto max-h-full">
                                 Ser el Laboratorio egional de Computo de Alto Desempeño(LARCAD), para ser líder en México y figurar como un referente internacional, brindando soluciones tecnológicas con un alta capacitad de respuesta para lograr satisfacer las nuevas necesidades de la sociedad, atendiendo proyectos a gran escala. Esto bajo un esquema de: • Autosustentabilidad • Infraestructura en constante actualización • Innovación de servicios • Personal certificado y orientado al aprovechamiento de los recursos.
                             </p>
                         </div>
@@ -136,7 +149,7 @@
                         <div class="absolute inset-0 bg-black bg-opacity-60 group-hover:bg-opacity-80 transition-all duration-300"></div>
                         <div class="absolute inset-0 flex flex-col items-center justify-center text-center p-4 sm:p-6">
                             <h2 class="text-orange-500 text-xl font-bold z-20 transition-all duration-300 group-hover:opacity-0 group-hover:scale-90">¿QUÉ HACEMOS?</h2>
-                            <p class="text-orange-500 text-base font-semibold opacity-0 scale-90 group-hover:opacity-100 group-hover:scale-100 transition-all duration-300 z-20 absolute inset-0 flex items-center justify-center text-center p-4 overflow-y-auto max-h-full">
+                            <p class="text-orange-500 text-base font-semibold opacity-0 scale-90 group-hover:opacity-100 group-hover:scale-100 transition-all duration-300 z-20 absolute inset-0 flex items-center justify-center text-center p-5 pt-10 sm:pt-5 overflow-y-auto max-h-full">
                                 Las Soluciones tecnológicas que ofrecemos han surgido de un contexto cultural y tecnológico, que responde a las necesidades de nuestros clientes, enfrentándonos a los desafíos que actualmente tiene las organizaciones en cuestión de tecnología. Nuestros servicios tienen el objetivo claro de ofrecer soluciones efectivas, confiables y seguras que buscan lograr resultados concretos que generen una mejora y credibilidad en su adopción.
                             </p>
                         </div>
