--- a/src/public/servicio.html
+++ b/src/public/servicio.html
@@ -12,7 +12,7 @@
 <body class="bg-white">
   <!-- Loader GIF pantalla completa -->
   <div id="loader" class="fixed inset-0 z-50 flex items-center justify-center bg-white">
-    <img src="/img/cafetera.gif" alt="Cargando..." class="w-32 h-32 animate-pulse" />
+    <img src="/img/cargando.gif" alt="Cargando..." class="w-32 h-32 animate-pulse" />
   </div>
 
   <nav class="bg-black text-white px-6 py-7 flex items-center justify-between fixed top-0 left-0 w-full z-50">
@@ -247,7 +247,7 @@
     window.onload = function() {
       setTimeout(function() {
         document.getElementById('loader').style.display = 'none';
-      }, 1500); // 1500 ms = 1.5 segundos
+      }, 500); // 1500 ms = 1.5 segundos
     };
   </script>
 </body>
